--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ before_cache:
 before_script:
   - docker load -i docker_images/images.tar || true
 
-script: ./ci_scilla_type_check.sh && npm i && npm test
+script: ./ci_scilla_type_check.sh && npm i
 
 skip_cleanup: true
